--- a/index.html
+++ b/index.html
@@ -19,5 +19,18 @@
 <p>넷째, 웹은 인터넷에서의 분산된 정보의 저장소 역할을 한다. 웹 이전의 인터넷은 중앙 집중식 서비스였다. 서비스를 제공하는 서버에 모든 데이터가 집중됨으로 말미암아 서버의 부담이 증가하고, 많은 사용자가 동시에 서버에 접근할 수가 없었다. 그러나 웹은 각종 정보들이 기본적으로 분산 저장되어 관리되고 있다. 이렇게 함으로써, 정보 제공 서버의 과중한 부하를 방지할 수 있는 것이다.</p>
 <p>다섯째, 웹은 인터넷에 존재하는 일반 텍스트 형태의 문서, 그림, 음성, 그리고 동화상 등의 각종 자료들을 인터넷 주소(URL)를 이용해서 하나의 문서 형태로 통합적으로 관리, 제공해 주는 역할을 한다.
   </p>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5a3a0dcdbbdfe97b137fc786/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
